--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts",
+    "start": "ts-node-dev src/server.ts",
     "demo": "node example/demo.js"
   },
   "keywords": [],
